# vektor

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  README.md  aclocal.m4  bam.lua  config.h  config.h.in  configure  configure.ac  draw.c  draw.h  image.h  input.c  input.h  libtool  make.sh  maketexture.c  net.h  player.c  player.h  sdl.h  sdl_window.c  sprite.c  texture.c  texture.h  vektor.pc  vektor.pc.in
docs/: engine.dia
share/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  bitmap.c  bitmap.h  button.c  button.h  camera.c  camera.h  clickable.c  clickable.h  config.h.in  console.c  console.h  draw.c  draw.h  draw_model.c  draw_model.h  engine.c  engine.h  event.c  event.h  font.c  font.h  glsl_shaders.c  glsl_shaders.h  ground.c  ground.h  image.h  input.c  input.h  keybind.c  keybind.h  keys.h  keystates.c  keystates.h  log.c  log.h  makemodel.c  makemodel.h  maketexture.c  (+40 more)
src/engine/: glsl_shaders.c  keybind.c  texture.c
src/engine/include/: camera.h  image.h  keybind.h  keystates.h  sprite.h  window.h
src/glsl/: vs_simple.vs
src/impl/core/: camera.c  draw_model.c  engine.c  event.c  glsl_shaders.c  input.c  keybind.c  keystates.c  log.c  model.c  net.c  scenegraph.c  skybox.c  sprite.c  texture.c  window.c
src/impl/tools/: makemodel.c  maketexture.c
src/impl/ui/: button.c  console.c  font.c  mousehandler.c  scrollbar.c  tabbar.c  textbox.c  textbox_fps.c  ui_window.c
src/include/core/: camera.h  draw_model.h  engine.h  glsl_shaders.h  input.h  keybind.h  keys.h  keystates.h  log.h  model.h  net.h  scenegraph.h  sdl.h  skybox.h  sprite.h  texture.h  vektor_in.h  vektor_out_1.h  window.h
src/include/tools/: makemodel.h  maketexture.h
src/include/ui/: button.h  console.h  font.h  mousehandler.h  scrollbar.h  tabbar.h  textbox.h  textbox_fps.h  ui.h  ui_window.h
src/shaders/: Makefile.am  Makefile.in  fs_simple.fs  fs_simple_mac.fs  vs_simple.vs  vs_simple_mac.vs
src/tools/include/: makemodel.h  maketexture.h
src/ui/: Makefile.am  Makefile.in  button.h  console.c  console.h  font.c  font.h  mousehandler.c  mousehandler.h  scrollbar.h  textbox.c  textbox.h  textbox_fps.c  textbox_fps.h
src/ui/include/: font.h  scrollbar.h  textbox.h
